<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow"
    android:orientation="vertical">

    <!-- Toolbar para el menú desplegable -->

    <!-- Contenedor horizontal para la campana y el botón de ofertas -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:title="@string/pantalla_principal"
        android:titleTextColor="@android:color/white">

        <!-- Menú desplegable -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:theme="@style/MenuItemStyle"
            android:contentDescription="@string/menu"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Ícono de la campana -->
        <ImageView
            android:id="@+id/iconoCampana"
            android:layout_width="53dp"
            android:layout_height="49dp"
            android:contentDescription="@string/campana"
            android:src="@drawable/ic_bell" />

        <!-- Botón de ofertas -->
        <Button
            android:id="@+id/botonOfertas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/button_blue"
            android:text="@string/ofertas"
            android:textColor="@color/text_white" />
    </LinearLayout>

    <!-- WebView para el chat -->
    <WebView
        android:id="@+id/chatWebView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
