<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow"
    tools:ignore="ExtraText">
    tools:context=".AdminActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/button_blue"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView para mostrar usuarios -->

    <!-- Botón flotante para agregar funcionalidades -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsuarios"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:backgroundTint="@color/button_blue"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/botonAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAdmin"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/button_blue"
        android:textColor="@color/text_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Titulo para usuarios -->
    <TextView
        android:id="@+id/tituloClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientes"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/button_blue"
        android:textColor="@color/text_white"
        tools:ignore="MissingConstraints" />

    <!-- boton cerrar sesion -->
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesi_n"
        android:backgroundTint="@color/button_blue"
        android:textColor="@color/text_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <!-- Botón para acceder al chat de gestión de mensajes -->
    <Button
        android:id="@+id/btnGestionChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gesti_n_de_chat"
        android:backgroundTint="@color/button_blue"
        android:textColor="@color/text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />




</androidx.constraintlayout.widget.ConstraintLayout>
